# Ironclaw-W-Self-Learning_Unofficial

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  cli.py  codecov.yml  deny.toml  providers.json  release-plz.toml
.config/: nextest.toml
.github/: pull_request_template.md
channels-src/wechat/: Cargo.toml  wechat.capabilities.json
channels-src/wechat/src/: lib.rs
crates/ironclaw_capabilities/: Cargo.toml
crates/ironclaw_capabilities/src/: error.rs  helpers.rs  lib.rs  obligations.rs  requests.rs
crates/ironclaw_capabilities/tests/: capability_host_contract.rs  capability_host_run_state_contract.rs  capability_host_spawn_contract.rs
crates/ironclaw_dispatcher/: CLAUDE.md  Cargo.toml
crates/ironclaw_dispatcher/src/: lib.rs
crates/ironclaw_dispatcher/tests/: runtime_dispatcher_integration.rs
crates/ironclaw_extensions/: CLAUDE.md  Cargo.toml
crates/ironclaw_extensions/src/: lib.rs
crates/ironclaw_extensions/tests/: extension_contract.rs
crates/ironclaw_filesystem/: Cargo.toml
crates/ironclaw_filesystem/src/: lib.rs
crates/ironclaw_filesystem/tests/: db_root_filesystem_contract.rs
crates/ironclaw_host_runtime/: CLAUDE.md  Cargo.toml
crates/ironclaw_host_runtime/src/: lib.rs  obligations.rs  production.rs  services.rs
crates/ironclaw_host_runtime/tests/: builtin_obligation_handler_contract.rs  obligation_services_composition_contract.rs  production_trust_contract.rs  reborn_e2e_gate.rs  reborn_invoke_vertical_slice.rs
crates/ironclaw_processes/: Cargo.toml
crates/ironclaw_processes/src/: cancellation.rs  filesystem_store.rs  host.rs  lib.rs  memory_store.rs  wrappers.rs
crates/ironclaw_processes/tests/: process_services_contract.rs
crates/ironclaw_resources/: Cargo.toml
crates/ironclaw_resources/src/: lib.rs
crates/ironclaw_run_state/: Cargo.toml
crates/ironclaw_run_state/src/: lib.rs
crates/ironclaw_run_state/tests/: run_state_contract.rs
crates/ironclaw_scripts/: Cargo.toml
crates/ironclaw_scripts/tests/: script_dispatch_integration.rs
crates/ironclaw_silk_decoder/: Cargo.toml  README.md
crates/ironclaw_trust/: CLAUDE.md  Cargo.toml
crates/ironclaw_trust/src/: clock.rs  fixtures.rs  lib.rs  sources.rs
crates/ironclaw_trust/src/tests/: policy_contract.rs
crates/ironclaw_trust/tests/: public_api_contract.rs
hermes-agent/: hdc_dsv_server.py
ironclaw/: .env.example  Cargo.toml  Dockerfile.self-improve  FEATURE_PARITY.md  README.zh-CN.md  build.rs
ironclaw/crates/ironclaw_approvals/: CLAUDE.md  Cargo.toml
ironclaw/crates/ironclaw_approvals/src/: lib.rs
ironclaw/crates/ironclaw_approvals/tests/: approval_resolution_contract.rs
ironclaw/crates/ironclaw_audit_py/: Cargo.toml
ironclaw/crates/ironclaw_audit_py/src/: lib.rs
ironclaw/crates/ironclaw_authorization/: CLAUDE.md  Cargo.toml
ironclaw/crates/ironclaw_authorization/src/: lib.rs
ironclaw/crates/ironclaw_authorization/tests/: capability_access_contract.rs  capability_lease_contract.rs
ironclaw/crates/ironclaw_common/: Cargo.toml
ironclaw/crates/ironclaw_common/src/: attachment.rs  event.rs  util.rs
ironclaw/crates/ironclaw_events/: Cargo.toml
ironclaw/crates/ironclaw_hdc_dsv/: Cargo.toml
ironclaw/crates/ironclaw_hdc_dsv/src/: adapter.rs  lib.rs  types.rs
ironclaw/crates/ironclaw_hdc_server/: Cargo.toml
ironclaw/crates/ironclaw_hdc_server/src/: auth.rs  handlers.rs  main.rs  model.rs  types.rs
ironclaw/crates/ironclaw_hermes_bridge/: Cargo.toml
ironclaw/crates/ironclaw_hermes_bridge/src/: lib.rs  memory_proxy.rs  policy.rs  rate_limiter.rs  skill_manage.rs  types.rs
ironclaw/crates/ironclaw_host_api/: CLAUDE.md  Cargo.toml
ironclaw/crates/ironclaw_host_api/src/: approval.rs  dispatch.rs  ids.rs  resource.rs  runtime.rs  scope.rs
ironclaw/crates/ironclaw_llm/: CLAUDE.md  Cargo.toml
ironclaw/crates/ironclaw_llm/src/: bedrock.rs  circuit_breaker.rs  codex_chatgpt.rs  failover.rs  gemini_oauth.rs  github_copilot_auth.rs  lib.rs  provider.rs  registry.rs  response_cache.rs  retry.rs  rig_adapter.rs  token_refreshing.rs
ironclaw/crates/ironclaw_llm/src/testing/: fault_injection.rs
ironclaw/crates/ironclaw_llm/src/transcription/: mod.rs
ironclaw/crates/ironclaw_mcp/: Cargo.toml
ironclaw/crates/ironclaw_mcp/tests/: mcp_adapter_contract.rs
ironclaw/crates/ironclaw_memory/: Cargo.toml
ironclaw/crates/ironclaw_memory/src/: lib.rs
ironclaw/crates/ironclaw_memory/tests/: db_memory_repository_contract.rs  memory_filesystem_contract.rs  memory_filesystem_vertical_integration.rs
ironclaw/crates/ironclaw_network/: Cargo.toml
ironclaw/crates/ironclaw_network/src/: lib.rs
ironclaw/crates/ironclaw_oauth/: CLAUDE.md  Cargo.toml
ironclaw/crates/ironclaw_safety/: Cargo.toml
ironclaw/crates/ironclaw_safety/src/: leak_detector.rs
ironclaw/crates/ironclaw_secrets/: Cargo.toml
ironclaw/crates/ironclaw_secrets/src/: lib.rs
ironclaw/crates/ironclaw_secrets/tests/: boundary_contract.rs
ironclaw/crates/ironclaw_self_improve_dispatcher/: Cargo.toml
ironclaw/crates/ironclaw_self_improve_dispatcher/src/: config.rs  crypto.rs  dispatcher.rs  lib.rs  llm_resolver.rs  orchestrator_client.rs  pyo3_bindings.rs  rollback.rs  snapshot.rs  types.rs
ironclaw/crates/ironclaw_tool_bridge_rs/: Cargo.toml
ironclaw/crates/ironclaw_tool_bridge_rs/src/: lib.rs  policy.rs  pyo3_bindings.rs  registry.rs  session.rs  types.rs
migrations/: V14__users.sql  V15__conversation_source_channel.sql  V18__tool_scope.sql  V19__channel_identities.sql  V20__pairing_requests.sql  V26__root_filesystem_entries.sql
plans/: IMPLEMENTATION_README.md  hermes-ironclaw-secure-self-improvement.md  rust-self-improvement-rewrite.md  upstream-sync-strategy.md
profiles/: local-sandbox.toml  local.toml
scripts/: append_plan_tail.py  check-version-bumps.sh  check_gateway_boundaries.py  check_no_panics.py  pre-commit-safety.sh  reborn-e2e-rust.sh  release.py  render-architecture-video.sh  replay-snap.sh  sync-upstreams.sh
src/: NETWORK_SECURITY.md  app.rs  bootstrap.rs  error.rs  http_intercept.rs  lib.rs  service.rs  tenant.rs
(+1045 files in other folders)
