[package]
name = "ironclaw_audit_py"
version = "0.1.0"
edition = "2024"
description = "PyO3 bindings for IronClaw audit SHA-256 hashing and write event recording — replaces Python hashlib usage to prevent monkey-patching"
license = "MIT OR Apache-2.0"

[lib]
name = "ironclaw_audit_py"
crate-type = ["cdylib"]

[dependencies]
# PyO3 Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# SHA-256 hashing (not patchable from Python)
sha2 = "0.10"
hex = "0.4"

# Async runtime (for DB operations)
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for orchestrator API fallback
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

[dev-dependencies]
tokio-test = "0.4"
