[package]
name = "ironclaw_hdc_dsv"
version = "0.1.0"
edition = "2024"
description = "HDC DSV (Hyperdimensional Computing Distributed Sparse Vector) adapter for IronClaw self-improvement quality gate"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
wiremock = "0.6"
