[package]
name = "ironclaw_llm"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Multi-provider LLM integration with retry, failover, circuit breaker, and response caching"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[package.metadata.dist]
dist = false

[features]
default = []
bedrock = ["dep:aws-config", "dep:aws-sdk-bedrockruntime", "dep:aws-smithy-types"]
# Opt-in StubLlm + credentials helpers for downstream test code.
testing = []

[dependencies]
ironclaw_common = { path = "../ironclaw_common", version = "0.4.2" }
ironclaw_safety = { path = "../ironclaw_safety", version = "0.2.2" }

async-trait = "0.1"
anyhow = "1"
base64 = "0.22.1"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
eventsource-stream = "0.2"
futures = "0.3"
open = "5"
rand = "0.8"
urlencoding = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls-native-roots", "stream"] }
rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "maths"] }
rust_decimal_macros = "1"
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["sync", "io-util", "io-std", "time", "macros", "rt", "fs", "process", "net"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

aws-config             = { version = "1", features = ["behavior-version-latest"], optional = true }
aws-sdk-bedrockruntime = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio", "behavior-version-latest"], optional = true }
aws-smithy-types       = { version = "1", optional = true }

[dev-dependencies]
insta = { version = "1.46.3", features = ["yaml"] }
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
tracing-test = "0.2"
