[package]
name = "ironclaw_safety"
version = "0.2.2"
edition = "2024"
rust-version = "1.92"
description = "Prompt injection defense, input validation, secret leak detection, and safety policy enforcement"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"

[package.metadata.dist]
dist = false

[dependencies]
aho-corasick = "1"
regex = "1"
serde_json = "1"
thiserror = "2"
tracing = "0.1"
url = "2"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "safety_check"
harness = false

[[bench]]
name = "safety_pipeline"
harness = false
