[package]
name = "ironclaw_secrets"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
ironclaw_host_api = { path = "../ironclaw_host_api" }
secrecy = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
