[package]
name = "ironclaw_tool_bridge_rs"
version = "0.1.0"
edition = "2024"
description = "Rust rewrite of the Hermes IronClaw tool bridge with fail-closed semantics and compile-time frozen sandboxed tool set"
license = "MIT OR Apache-2.0"

[lib]
name = "ironclaw_tool_bridge_rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# PyO3 Python bindings
pyo3 = { version = "0.22", features = ["extension-module"] }

# HTTP client with rustls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Concurrent session registry (lock-free HashMap)
dashmap = "6"

# Global singleton initialization
once_cell = "1"

# Compile-time frozen hash sets for sandboxed tool names
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tokio-test = "0.4"
